--- a/public/next.html
+++ b/public/next.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Your Next Steps</title>
+    <title>Your Top Priorities</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/styles.css" />
   </head>
@@ -12,7 +12,7 @@
     <div class="w-full border-b next_page_header" style="border-color:#E5E7EB; background: linear-gradient(135deg, #00A8A8 0%, #0077FF 100%);">
       <div class="layout-container next_page_header_wrap py-8 text-white" style="max-width: 1400px;">
         <div class="next_page_header_left">
-            <h1 class="text-3xl md:text-4xl font-semibold tracking-tight">Your Next Steps</h1>
+            <h1 class="text-3xl md:text-4xl font-semibold tracking-tight">Your Top Priorities</h1>
             <p class="mt-2 max-w-3xl text-sm md:text-base opacity-90">Based on your latest assessment, start with the top priorities and work your way down. Expand an item to see why it matters, how to do it, and download resources.</p>
         </div>
 
