--- a/public/details.html
+++ b/public/details.html
@@ -8,22 +8,29 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body class="page-bg bg-white text-slate-900">
-    <!-- Header -->
-    <div class="sticky-header">
-      <div class="layout-container py-5 flex items-center justify-between">
-        <div>
-          <h1 id="detailsTitle" class="details-title text-2xl">Assessment — Detailed Assessment</h1>
-          <p class="text-sm text-slate-600">Dive into categories, review individual questions, and push actions straight into your Next Steps.</p>
+    <div class="fixed-menu-header">
+      <div class="fixed-menu-header-container">
+        <div class="fixed-menu-logo">
+          <img src="/images/CHG_Logo_200.png" alt="Tech Partner Assessment Dashboard" />
         </div>
-        <div class="flex items-center gap-3">
-          <a id="backLink" href="/index.html" class="button-secondary flex items-center">Back to Dashboard</a>
-          <button class="button-primary button-rounded">Export Category Report</button>
+        <div class="flex items-center gap-2 header-buttons">
+          <a id="backLink" href="/index.html" class="button-outline flex items-center">Back to Dashboard</a>
+          <button class="button-primary">Export Category Report</button>
         </div>
       </div>
     </div>
+    <header class="header-bar">
+      <div class="header-bar-logo">
+        <img src="/images/TPOS_highres.png" alt="Assessment Details" />
+      </div>
+      <div class="header-bar-text">
+        <h1 id="detailsTitle" class="title-main text-2xl md:text-3xl">Assessment — Detailed Assessment</h1>
+        <p class="subtitle text-sm md:text-base mt-1">Dive into categories, review individual questions, and push actions straight into your Next Steps.</p>
+      </div>
+    </header>
 
     <!-- Overview band -->
-    <div class="bg-gradient-to-r from-white to-[rgba(31,181,172,0.05)] border-y">
+    <div class="bg-gradient-to-r from-white to-[rgba(31,181,172,0.05)] ">
       <div class="layout-container py-6 grid grid-cols-1 lg:grid-cols-12 gap-6">
         <!-- Score card -->
         <div class="lg:col-span-3 card card-lg shadow-sm">
@@ -95,6 +102,18 @@
 
       <!-- Right: Recommendation (5 cols) -->
       <aside class="xl:col-span-5">
+
+             <!-- Assessment-level Why and Tips panel -->
+             <div class="card card-lg shadow-sm " style="margin-bottom: 20px;">
+              <div class="p-5">
+                <div class="text-sm font-semibold">Why this matters</div>
+                <p id="assessWhyText" class="text-sm text-slate-700 mb-3">—</p>
+                <div class="text-sm font-semibold">Quick tips</div>
+                <ul id="assessQuickTips" class="list-disc pl-5 text-sm text-slate-700 space-y-1"></ul>
+              </div>
+            </div>
+
+
         <div class="card card-lg shadow-sm">
           <div class="p-5">
             <div class="flex items-center gap-3 mb-3 selectedCat-scoreNstageWrap">
@@ -110,23 +129,22 @@
           </div>
         </div>
 
-        <!-- Assessment-level Why and Tips panel -->
-        <div class="card card-lg shadow-sm mt-4">
-          <div class="p-5">
-            <div class="text-sm font-semibold">Why this matters</div>
-            <p id="assessWhyText" class="text-sm text-slate-700 mb-3">—</p>
-            <div class="text-sm font-semibold">Quick tips</div>
-            <ul id="assessQuickTips" class="list-disc pl-5 text-sm text-slate-700 space-y-1"></ul>
-          </div>
-        </div>
+
+   
+
+
+
       </aside>
     </div>
 
 
 
     <script src="/js/constants.js" defer></script>
+    <script src="/js/ui.js" defer></script>
     <script src="/js/details.js" defer></script>
   </body>
   </html>
+
+
 
 
