--- a/public/details.html
+++ b/public/details.html
@@ -15,7 +15,7 @@
         </div>
         <div class="flex items-center gap-2 header-buttons">
           <a id="backLink" href="/index.html" class="button-outline flex items-center">Back to Dashboard</a>
-          <a id="btnActionsDetails" class="button-primary" href="#">Actions</a>
+          <a id="btnActionsDetails" class="button-primary" href="#">All Actions</a> 
         </div>
       </div>
     </div>
