--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
           <div class="flex items-center gap-2 header-buttons">
             <button id="btnRecalc" class="button-outline">Recalculate</button>
             <button id="btnExport" class="button-secondary">Export Report</button>
-            <a id="btnActions" class="button-primary" href="#">Actions</a>
+            <a id="btnActions" class="button-primary" href="#">All Actions</a>
           </div>
           </div>
       </div>
